/*
 * Copyright Â© 2024 Kaleido, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
 * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";
package github.com.kaleido_io.paladin.kata.transportmanager;
option go_package = "pkg/proto/transportmanager";

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

service TransportManager {
  rpc Status(google.protobuf.Empty) returns (PluginStatus) {}

  // TODO: This should actually be a Kata Message but due to some weirdness in the golang generator this looks like it isn't working
  rpc Transport(stream ExternalMessage) returns (stream google.protobuf.Any) {}
}

message PluginStatus {
    bool ok = 1;
}

message ExternalMessage {
    google.protobuf.Any body = 1;
    bytes transportDetails = 2;
}
